Fix alignment issues with icons in browse pages

--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -1,13 +1,17 @@
 /* Make space for icons */
 
-a.node, a.way, a.relation { 
-  &:first-child {
-    &::before {
-      margin-left: -25px;
-    }
-  }
+li.node::before,
+li.way::before,
+li.relation::before,
+a.node:first-child::before,
+a.way:first-child::before,
+a.relation:first-child::before {
+  margin-left: -25px;
 }
-a.node::before, a.way::before, a.relation::before {
+
+.node::before,
+.way::before,
+.relation::before {
   display: inline-block;
   width: 25px;
 }
